syntax = "proto3";

package yandex.cloud.events.mdb.mysql;

import "google/rpc/status.proto";
import "yandex/cloud/events/common.proto";
import "yandex/cloud/events/options.proto";
import "yandex/cloud/mdb/mysql/v1/database.proto";
import "yandex/cloud/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/mdb/mysql;mysql";
option java_package = "yandex.cloud.api.events.mdb.mysql";

message CreateDatabase {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  events.EventStatus event_status = 5 [(required) = true];
  EventDetails details = 6 [(required) = true];

  google.rpc.Status error = 7;
  RequestParameters request_parameters = 8;
  events.Response response = 9;

  message EventDetails {
    string cluster_id = 1 [(required) = true];
    string database_name = 2 [(required) = true];
    string cluster_name = 3;
  }
  
  message RequestParameters {
    // ID of the MySQL cluster to create a database in.
    string cluster_id = 1 [(required) = true, (length) = "<=50"];

    // Configuration of the database to create.
    yandex.cloud.mdb.mysql.v1.DatabaseSpec database_spec = 2 [(required) = true];
  }
}

message DeleteDatabase {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  events.EventStatus event_status = 5 [(required) = true];
  EventDetails details = 6 [(required) = true];

  google.rpc.Status error = 7;
  RequestParameters request_parameters = 8;
  events.Response response = 9;

  message EventDetails {
    string cluster_id = 1 [(required) = true];
    string database_name = 2 [(required) = true];
    string cluster_name = 3;
  }
  
  message RequestParameters {
    // ID of the MySQL cluster to create a database in.
    string cluster_id = 1 [(required) = true, (length) = "<=50"];

    // Name of the database to delete.
    string database_name = 2 [(required) = true, (length) = "<=63", (pattern) = "[a-zA-Z0-9_-]*"];
  }
}
